fixed grey box cutting off search items on the application approval page

--- a/src/main/theme/less/wells.less
+++ b/src/main/theme/less/wells.less
@@ -35,5 +35,4 @@
     background-color: @gray-lighter;
     border: 1px solid @well-border;
     border-radius: @border-radius-base;
-    overflow: hidden;
 }
